# Gold-Price-Prediction

./: Gold Price Prediction.ipynb  README.md  app.py  gld_price_data.csv  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Gold Price Prediction-checkpoint.ipynb
