[build-system]
requires = ["setuptools==68.2.2", "wheel==0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-price-prediction"
version = "1.0.0"
description = "Gold Price Prediction using Machine Learning"
requires-python = ">=3.11.6,<3.12"
dependencies = [
    "numpy==1.26.0",
    "pandas==2.1.1",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "scikit-learn==1.3.1",
    "streamlit==1.27.2",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "six==1.16.0"
]

[tool.setuptools]
packages = ["gold_price_prediction"]